Pull request #72: added option for overriding google services version
Merge in MML/infobip-mobile-messaging-cordova-plugin from okoroleva-MM-4608 to master

Squashed commit of the following:

commit d493ed9be2a0d3f4b18140d10c6a00ca3933188c
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Fri Jun 18 15:44:03 2021 +0300

    added option for overriding google services version

--- a/libs/android/mobile-messaging-aar.gradle
+++ b/libs/android/mobile-messaging-aar.gradle
@@ -19,6 +19,8 @@ if (overrideAndroidSupportLibsVersion.empty || overrideAndroidSupportLibsVersion
 }
 
 buildscript {
+    def overrideGoogleServicesVersion = cdvHelpers.getConfigPreference("IB_ANDROID_GOOGLE_SERVICES_VER", "4.2.0")
+
     repositories {
         maven { url "https://maven.google.com" }
         maven { url 'http://developer.huawei.com/repo/' }
@@ -26,7 +28,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.google.gms:google-services:4.2.0'
+        classpath "com.google.gms:google-services:${overrideGoogleServicesVersion}"
         classpath 'com.android.tools.build:gradle:3.5.2'
     }
 }
