--- a/libs/android/mobile-messaging-aar.gradle
+++ b/libs/android/mobile-messaging-aar.gradle
@@ -13,7 +13,7 @@ if (overrideAndroidSupportLibsVersion.empty || overrideAndroidSupportLibsVersion
             url 'https://maven.google.com/'
             name 'Google'
         }
-        maven { url 'http://developer.huawei.com/repo/' }
+        maven { url 'https://developer.huawei.com/repo/' }
         mavenCentral()
     }
 }
@@ -21,7 +21,7 @@ if (overrideAndroidSupportLibsVersion.empty || overrideAndroidSupportLibsVersion
 buildscript {
     repositories {
         maven { url "https://maven.google.com" }
-        maven { url 'http://developer.huawei.com/repo/' }
+        maven { url 'https://developer.huawei.com/repo/' }
         jcenter()
         mavenCentral()
     }
