Pull request #83: aboldyrev MM-4620 androidx
Merge in MML/infobip-mobile-messaging-cordova-plugin from aboldyrev_MM-4620_androidx to 3.0.0

Squashed commit of the following:

commit 4a7d08a6fa09393f0466a947bfd7ba019dc1b71c
Author: Alexander Boldyrev <alexander.boldyrev@infobip.com>
Date:   Wed Jul 13 17:20:38 2022 +0300

    bumps

commit 9a038034fac1d32d729b3494376937b4e901c09c
Author: Alexander Boldyrev <alexander.boldyrev@infobip.com>
Date:   Mon Jul 11 22:04:35 2022 +0300

    breakit bracket

commit ef215823879f18e6ba51139050bb24381e5781c2
Author: Alexander Boldyrev <alexander.boldyrev@infobip.com>
Date:   Mon Jul 11 21:54:06 2022 +0300

    extras

commit 30a910f5739e57acc35ec3a0fc16f402efc64285
Author: Alexander Boldyrev <alexander.boldyrev@infobip.com>
Date:   Mon Jul 11 21:30:08 2022 +0300

    geo excluded for HMS case

commit 7d4c8eb7939f7a7441be27d221ebaf29f803e2f7
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Wed Jun 29 14:40:46 2022 +0300

    bump iOS sdk version

commit 7200b4e9ca240993a68b898c064fd49bdee518e1
Author: Alexander Boldyrev <alexander.boldyrev@infobip.com>
Date:   Mon Jun 27 17:32:47 2022 +0300

    version bump

--- a/plugin.xml
+++ b/plugin.xml
@@ -70,6 +70,7 @@
 			<preference name="IB_ANDROID_GMS_VER_OVERRIDE" value="$ANDROID_GMS_VER_OVERRIDE"/>
 			<preference name="IB_ANDROID_FIREBASE_VER_OVERRIDE" value="$ANDROID_FIREBASE_VER_OVERRIDE"/>
 			<preference name="IB_ENABLE_HMS_SUPPORT" value="$ENABLE_HMS_SUPPORT"/>
+			<preference name="IB_ANDROID_USE_CRYPTOR_MIGRATION" value="$ANDROID_USE_CRYPTOR_MIGRATION"/>
 		</config-file>
 
 		<config-file target="AndroidManifest.xml" parent="/manifest/application">
