--- a/libs/android/mobile-messaging-aar.gradle
+++ b/libs/android/mobile-messaging-aar.gradle
@@ -1,6 +1,7 @@
 def overrideAndroidSupportLibsVersion = cdvHelpers.getConfigPreference("IB_ANDROID_SUPPORT_VER_OVERRIDE", "false")
 def overrideGmsVersion = cdvHelpers.getConfigPreference("IB_ANDROID_GMS_VER_OVERRIDE", "false")
 def overrideFirebaseVersion = cdvHelpers.getConfigPreference("IB_ANDROID_FIREBASE_VER_OVERRIDE", "false")
+def withCryptorMigration = cdvHelpers.getConfigPreference("IB_ANDROID_USE_CRYPTOR_MIGRATION", "false")
 
 if (overrideAndroidSupportLibsVersion == "false") overrideAndroidSupportLibsVersion = ""
 if (overrideGmsVersion == "false") overrideGmsVersion = ""
@@ -33,8 +34,8 @@ buildscript {
 // apply plugin: 'com.huawei.agconnect'
 
 dependencies {
-    def mmHmsVersion = '2.2.3'
-    def mmFcmVersion = '5.3.6'
+    def mmHmsVersion = '3.0.0-rc1'
+    def mmFcmVersion = '6.3.1'
     // Modified by scripts/hms_fix_dependencies.js . To enable run: cordova build android --hms
     def isHmsBuild = false
 
@@ -45,8 +46,8 @@ dependencies {
         implementation("com.infobip:infobip-mobile-messaging-android-sdk:$mmFcmVersion@aar") {
             transitive = true;
             if (!overrideAndroidSupportLibsVersion.empty) {
-                exclude group: 'com.android.support', module: 'support-v4'
-                exclude group: 'com.android.support', module: 'appcompat-v7'
+                exclude group: 'androidx.legacy', module: 'legacy-support-v4'
+                exclude group: 'androidx.appcompat', module: 'appcompat'
             }
             if (!overrideGmsVersion.empty) {
                 exclude group: 'com.google.android.gms', module: 'play-services-location'
@@ -60,27 +61,30 @@ dependencies {
 
     // Hms dependencies start
     if (isHmsBuild) {
-        implementation "com.infobip:infobip-mobile-messaging-huawei-geo-sdk:$mmHmsVersion@aar"
+//        implementation "com.infobip:infobip-mobile-messaging-huawei-geo-sdk:$mmHmsVersion@aar"
         implementation "com.infobip:infobip-mobile-messaging-huawei-chat-sdk:$mmHmsVersion@aar"
         implementation("com.infobip:infobip-mobile-messaging-huawei-sdk:$mmHmsVersion@aar") {
             transitive = true;
             if (!overrideAndroidSupportLibsVersion.empty) {
-                exclude group: 'com.android.support', module: 'support-v4'
-                exclude group: 'com.android.support', module: 'appcompat-v7'
+                exclude group: 'androidx.legacy', module: 'legacy-support-v4'
+                exclude group: 'androidx.appcompat', module: 'appcompat'
             }
         }
     }
     // Hms dependencies end
 
     if (!overrideAndroidSupportLibsVersion.empty) {
-        implementation "com.android.support:support-v4:$overrideAndroidSupportLibsVersion"
-        implementation "com.android.support:appcompat-v7:$overrideAndroidSupportLibsVersion"
+        implementation "androidx.legacy:legacy-support-v4:$overrideAndroidSupportLibsVersion"
+        implementation "androidx.appcompat:appcompat:$overrideAndroidSupportLibsVersion"
     }
     if (!overrideGmsVersion.empty) {
         implementation "com.google.android.gms:play-services-location:$overrideGmsVersion"
     }
     if (!overrideFirebaseVersion.empty) {
         implementation "com.google.firebase:firebase-messaging:$overrideFirebaseVersion"
+    }
+    if (withCryptorMigration.toBoolean()) {
+        implementation "com.infobip:infobip-mobile-messaging-android-cryptor-migration:$mmFcmVersion@aar"
     }
 }
 
