Pull request #85: Okoroleva MM-4620 fixes
Merge in MML/infobip-mobile-messaging-cordova-plugin from okoroleva-MM-4620_fixes to release-3.0.0

Squashed commit of the following:

commit 72c0bb204bf2d73e7bb09354f4014201e4bc4e22
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Thu Jul 21 13:31:59 2022 +0300

    plugin.xml changed dependencies to androidx

commit a769eb9ebaee4b6d5fc57d584fe89105f32d96c7
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Wed Jul 20 17:39:27 2022 +0300

    fix hms

commit f3f4c47886ba965c49bde799e2a6399494b654d5
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Wed Jul 20 17:36:55 2022 +0300

    exif added

commit b46a2406c63fb22e9adf4940b891c3430c6d5200
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Wed Jul 20 16:15:38 2022 +0300

    example fixes for android

commit 5749c7fdfa86894905955fdf1b7c1379ce200107
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Wed Jul 20 16:13:33 2022 +0300

    readme for huawei, cryptor migration for huawei

commit cb9878e23f71ea1f1f3d4bcd9c7a8c3425346328
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Wed Jul 20 11:18:33 2022 +0300

    readme for android

commit f0846ec63feabc744725de5c53a7471f7a95143a
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Tue Jul 19 16:46:05 2022 +0300

    readme + script for android sender id

--- a/libs/android/mobile-messaging-aar.gradle
+++ b/libs/android/mobile-messaging-aar.gradle
@@ -84,7 +84,11 @@ dependencies {
         implementation "com.google.firebase:firebase-messaging:$overrideFirebaseVersion"
     }
     if (withCryptorMigration.toBoolean()) {
-        implementation "com.infobip:infobip-mobile-messaging-android-cryptor-migration:$mmFcmVersion@aar"
+        if (isHmsBuild) {
+            implementation "com.infobip:infobip-mobile-messaging-huawei-cryptor-migration:$mmHmsVersion@aar"
+        } else {
+            implementation "com.infobip:infobip-mobile-messaging-android-cryptor-migration:$mmFcmVersion@aar"
+        }
     }
 }
 
