--- a/plugin.xml
+++ b/plugin.xml
@@ -83,8 +83,8 @@
 		</config-file>
 
 		<framework src="libs/android/mobile-messaging-aar.gradle" custom="true" type="gradleReference" />
-		<framework src="com.android.support:appcompat-v7:+"/>
-		<framework src="com.android.support:design:28.+"/>
+		<framework src="com.google.android.material:material:1.4.0"/>
+		<framework src="androidx.exifinterface:exifinterface:1.3.3"/>
 		<source-file src="src/android/MobileMessagingCordova.java" target-dir="src/org/apache/cordova/plugin"/>
 	</platform>
 
