Pull request #86: cryptor migration part example + code fix
Merge in MML/infobip-mobile-messaging-cordova-plugin from okoroleva-MM-4620_cryptorMigrationFix to release-3.0.0

Squashed commit of the following:

commit 4fbe363713a1f5f02a315aaae2211ffa08c4b729
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Thu Jul 21 17:21:22 2022 +0300

    disable geofencing for android

commit 14f52c557758d2b031b16f690c72b94469477b14
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Thu Jul 21 16:36:53 2022 +0300

    cryptor migration part example + code fix

--- a/libs/android/mobile-messaging-aar.gradle
+++ b/libs/android/mobile-messaging-aar.gradle
@@ -41,7 +41,8 @@ dependencies {
 
     // Android dependencies start
     if (!isHmsBuild) {
-        implementation "com.infobip:infobip-mobile-messaging-android-geo-sdk:$mmFcmVersion@aar"
+        // geofencing is disabled for rc version, will be enabled in next releases
+//        implementation "com.infobip:infobip-mobile-messaging-android-geo-sdk:$mmFcmVersion@aar"
         implementation "com.infobip:infobip-mobile-messaging-android-chat-sdk:$mmFcmVersion@aar"
         implementation("com.infobip:infobip-mobile-messaging-android-sdk:$mmFcmVersion@aar") {
             transitive = true;
@@ -61,6 +62,7 @@ dependencies {
 
     // Hms dependencies start
     if (isHmsBuild) {
+        // geofencing is disabled for rc version, will be enabled in next releases
 //        implementation "com.infobip:infobip-mobile-messaging-huawei-geo-sdk:$mmHmsVersion@aar"
         implementation "com.infobip:infobip-mobile-messaging-huawei-chat-sdk:$mmHmsVersion@aar"
         implementation("com.infobip:infobip-mobile-messaging-huawei-sdk:$mmHmsVersion@aar") {
