Pull request #91: MM-5684 baseurl
Merge in MML/infobip-mobile-messaging-cordova-plugin from aboldyrev-MM-5684-baseUrl to release-3.0.0

Squashed commit of the following:

commit dd4222e96943e444d4e3b303512d7646368a14ea
Author: Alexander Boldyrev <Alexander.Boldyrev@infobip.com>
Date:   Wed May 17 17:15:37 2023 +0200

    MM SDKs versions bump

--- a/libs/android/mobile-messaging-aar.gradle
+++ b/libs/android/mobile-messaging-aar.gradle
@@ -34,8 +34,8 @@ buildscript {
 // apply plugin: 'com.huawei.agconnect'
 
 dependencies {
-    def mmHmsVersion = '3.0.0-rc7'
-    def mmFcmVersion = '6.4.2'
+    def mmHmsVersion = '4.0.2'
+    def mmFcmVersion = '8.1.4'
     // Modified by scripts/hms_fix_dependencies.js . To enable run: cordova build android --hms
     def isHmsBuild = false
 
