--- a/libs/android/mobile-messaging-aar.gradle
+++ b/libs/android/mobile-messaging-aar.gradle
@@ -1,6 +1,7 @@
 def overrideAndroidSupportLibsVersion = cdvHelpers.getConfigPreference("IB_ANDROID_SUPPORT_VER_OVERRIDE", "false")
 def overrideGmsVersion = cdvHelpers.getConfigPreference("IB_ANDROID_GMS_VER_OVERRIDE", "false")
 def overrideFirebaseVersion = cdvHelpers.getConfigPreference("IB_ANDROID_FIREBASE_VER_OVERRIDE", "false")
+def withCryptorMigration = cdvHelpers.getConfigPreference("IB_ANDROID_USE_CRYPTOR_MIGRATION", "false")
 
 if (overrideAndroidSupportLibsVersion == "false") overrideAndroidSupportLibsVersion = ""
 if (overrideGmsVersion == "false") overrideGmsVersion = ""
@@ -26,30 +27,26 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.2'
+        classpath 'com.android.tools.build:gradle:7.4.2'
     }
 }
 
 // apply plugin: 'com.huawei.agconnect'
 
 dependencies {
-    def mmHmsVersion = '2.2.3'
-    def mmFcmVersion = '5.3.6'
+    def mmHmsVersion = '5.0.0'
+    def mmFcmVersion = '11.2.1'
     // Modified by scripts/hms_fix_dependencies.js . To enable run: cordova build android --hms
     def isHmsBuild = false
 
     // Android dependencies start
     if (!isHmsBuild) {
-        implementation "com.infobip:infobip-mobile-messaging-android-geo-sdk:$mmFcmVersion@aar"
         implementation "com.infobip:infobip-mobile-messaging-android-chat-sdk:$mmFcmVersion@aar"
         implementation("com.infobip:infobip-mobile-messaging-android-sdk:$mmFcmVersion@aar") {
             transitive = true;
             if (!overrideAndroidSupportLibsVersion.empty) {
-                exclude group: 'com.android.support', module: 'support-v4'
-                exclude group: 'com.android.support', module: 'appcompat-v7'
-            }
-            if (!overrideGmsVersion.empty) {
-                exclude group: 'com.google.android.gms', module: 'play-services-location'
+                exclude group: 'androidx.legacy', module: 'legacy-support-v4'
+                exclude group: 'androidx.appcompat', module: 'appcompat'
             }
             if (!overrideFirebaseVersion.empty) {
                 exclude group: 'com.google.firebase', module: 'firebase-messaging'
@@ -60,27 +57,30 @@ dependencies {
 
     // Hms dependencies start
     if (isHmsBuild) {
-        implementation "com.infobip:infobip-mobile-messaging-huawei-geo-sdk:$mmHmsVersion@aar"
         implementation "com.infobip:infobip-mobile-messaging-huawei-chat-sdk:$mmHmsVersion@aar"
         implementation("com.infobip:infobip-mobile-messaging-huawei-sdk:$mmHmsVersion@aar") {
             transitive = true;
             if (!overrideAndroidSupportLibsVersion.empty) {
-                exclude group: 'com.android.support', module: 'support-v4'
-                exclude group: 'com.android.support', module: 'appcompat-v7'
+                exclude group: 'androidx.legacy', module: 'legacy-support-v4'
+                exclude group: 'androidx.appcompat', module: 'appcompat'
             }
         }
     }
     // Hms dependencies end
 
     if (!overrideAndroidSupportLibsVersion.empty) {
-        implementation "com.android.support:support-v4:$overrideAndroidSupportLibsVersion"
-        implementation "com.android.support:appcompat-v7:$overrideAndroidSupportLibsVersion"
-    }
-    if (!overrideGmsVersion.empty) {
-        implementation "com.google.android.gms:play-services-location:$overrideGmsVersion"
+        implementation "androidx.legacy:legacy-support-v4:$overrideAndroidSupportLibsVersion"
+        implementation "androidx.appcompat:appcompat:$overrideAndroidSupportLibsVersion"
     }
     if (!overrideFirebaseVersion.empty) {
         implementation "com.google.firebase:firebase-messaging:$overrideFirebaseVersion"
+    }
+    if (withCryptorMigration.toBoolean()) {
+        if (isHmsBuild) {
+            implementation "com.infobip:infobip-mobile-messaging-huawei-cryptor-migration:$mmHmsVersion@aar"
+        } else {
+            implementation "com.infobip:infobip-mobile-messaging-android-cryptor-migration:$mmFcmVersion@aar"
+        }
     }
 }
 
