--- a/plugin.xml
+++ b/plugin.xml
@@ -2,7 +2,7 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	id="com-infobip-plugins-mobilemessaging"
-	version="3.0.0-rc4">
+	version="3.0.0-rc10">
 
 	<name>MobileMessagingCordova</name>
 	<keywords>Infobip,push,cordova</keywords>
@@ -70,6 +70,7 @@
 			<preference name="IB_ANDROID_GMS_VER_OVERRIDE" value="$ANDROID_GMS_VER_OVERRIDE"/>
 			<preference name="IB_ANDROID_FIREBASE_VER_OVERRIDE" value="$ANDROID_FIREBASE_VER_OVERRIDE"/>
 			<preference name="IB_ENABLE_HMS_SUPPORT" value="$ENABLE_HMS_SUPPORT"/>
+			<preference name="IB_ANDROID_USE_CRYPTOR_MIGRATION" value="$ANDROID_USE_CRYPTOR_MIGRATION"/>
 		</config-file>
 
 		<config-file target="AndroidManifest.xml" parent="/manifest/application">
@@ -82,8 +83,8 @@
 		</config-file>
 
 		<framework src="libs/android/mobile-messaging-aar.gradle" custom="true" type="gradleReference" />
-		<framework src="com.android.support:appcompat-v7:+"/>
-		<framework src="com.android.support:design:28.+"/>
+		<framework src="com.google.android.material:material:1.4.0"/>
+		<framework src="androidx.exifinterface:exifinterface:1.3.3"/>
 		<source-file src="src/android/MobileMessagingCordova.java" target-dir="src/org/apache/cordova/plugin"/>
 	</platform>
 
