Pull request #103: Ikresic MM-6265 cordova add inbox
Merge in MML/infobip-mobile-messaging-cordova-plugin from ikresic-MM-6265-cordova-add-inbox to master

Squashed commit of the following:

commit 8585708f6bd56b3e6007847f200dafa3028b5594
Merge: 204ae4d aa4adf8
Author: ikresic <ivan.kresic@infobip.com>
Date:   Thu Mar 21 14:21:47 2024 +0100

    Merge branch 'master' into ikresic-MM-6265-cordova-add-inbox

    # Conflicts:
    #	libs/ios/Cartfile
    #	libs/ios/Cartfile.resolved

commit 204ae4d084aeb9176ebd5a9956b19d085e74dbf4
Author: ikresic <ivan.kresic@infobip.com>
Date:   Thu Mar 21 11:43:40 2024 +0100

    - updated ios version

commit eef9bd1b9b0fc1289a836c320cace5d1689a5864
Author: ikresic <ivan.kresic@infobip.com>
Date:   Thu Mar 21 11:34:49 2024 +0100

    - updated ios version

commit e41b149d1a68b51bc89d789da346e455ab7f9a65
Author: ikresic <ivan.kresic@infobip.com>
Date:   Thu Mar 21 11:21:10 2024 +0100

    - updated ios version

commit 16dd9471a5ae3274ddc67efb986752fa81dc57ec
Author: ikresic <ivan.kresic@infobip.com>
Date:   Thu Mar 21 08:42:18 2024 +0100

    - updated ios version

commit a8d30f65fa72895132d73c96007fb9bd63cef328
Author: ikresic <ivan.kresic@infobip.com>
Date:   Thu Mar 21 00:19:34 2024 +0100

    - updated ios version

commit 6269e9a08cfb2b7da10a4809aa99b80361a0864c
Author: ikresic <ivan.kresic@infobip.com>
Date:   Thu Mar 21 00:15:49 2024 +0100

    - updated ios version

commit 41ddf19e4935cbe0990f3a0a2b04157fe8ca783d
Author: ikresic <ivan.kresic@infobip.com>
Date:   Thu Mar 21 00:02:14 2024 +0100

    - updated ios version

commit 27008a66c5ace88fd28bde763e7cfaa6d5388c1f
Author: ikresic <ivan.kresic@infobip.com>
Date:   Thu Mar 21 00:01:11 2024 +0100

    - updated ios version

commit 80f1a089f74d19c7603606449a848a55c11cda61
Author: ikresic <ivan.kresic@infobip.com>
Date:   Wed Mar 20 23:37:24 2024 +0100

    - updated ios version

commit 0f6f5f7c27491993f794eff7dc5d2d832a981de1
Author: ikresic <ivan.kresic@infobip.com>
Date:   Wed 

--- a/libs/android/mobile-messaging-aar.gradle
+++ b/libs/android/mobile-messaging-aar.gradle
@@ -42,6 +42,7 @@ dependencies {
     // Android dependencies start
     if (!isHmsBuild) {
         implementation "com.infobip:infobip-mobile-messaging-android-chat-sdk:$mmFcmVersion@aar"
+        implementation "com.infobip:infobip-mobile-messaging-android-inbox-sdk:$mmFcmVersion@aar"
         implementation("com.infobip:infobip-mobile-messaging-android-sdk:$mmFcmVersion@aar") {
             transitive = true;
             if (!overrideAndroidSupportLibsVersion.empty) {
@@ -58,6 +59,7 @@ dependencies {
     // Hms dependencies start
     if (isHmsBuild) {
         implementation "com.infobip:infobip-mobile-messaging-huawei-chat-sdk:$mmHmsVersion@aar"
+        implementation "com.infobip:infobip-mobile-messaging-huawei-inbox-sdk:$mmHmsVersion@aar"
         implementation("com.infobip:infobip-mobile-messaging-huawei-sdk:$mmHmsVersion@aar") {
             transitive = true;
             if (!overrideAndroidSupportLibsVersion.empty) {
