added inbox Pod, changed version to 12.5.1

--- a/plugin.xml
+++ b/plugin.xml
@@ -58,10 +58,11 @@
 
 		<podspec>
 			<pods use-frameworks="true">
-				<pod name="MobileMessaging" spec="12.3.6" />
-				<pod name="MobileMessaging/Geofencing" spec="12.3.6" />
-				<pod name="MobileMessaging/InAppChat" spec="12.3.6" />
-				<pod name="MobileMessaging/Geofencing" spec="12.3.6" />
+				<pod name="MobileMessaging" spec="12.5.1" />
+				<pod name="MobileMessaging/Geofencing" spec="12.5.1" />
+				<pod name="MobileMessaging/InAppChat" spec="12.5.1" />
+				<pod name="MobileMessaging/Geofencing" spec="12.5.1" />
+				<pod name="MobileMessaging/Inbox" spec="12.5.1" />
 			</pods>
 		</podspec>
 		<source-file src="src/ios/MobileMessagingCordova.swift" />
