Pull request #109: Okoroleva MM-6661 mmineAndUpdates
Merge in MML/infobip-mobile-messaging-cordova-plugin from okoroleva-MM-6661-mmineAndUpdates to ios_cocoapods_rc

Squashed commit of the following:

commit 53b2dc3a36728dff653c3e2f89abd3a1d27040db
Author: Olga Koroleva <olga.koroleva@infobip.com>
Date:   Wed Aug 14 12:25:22 2024 +0200

    mmine version change to 0.13.0

commit 335a1e0b27403f23e34593c89ccd30e843f66a6b
Merge: 2fe18eb 3690422
Author: Olga Koroleva <olga.koroleva@infobip.com>
Date:   Wed Aug 14 11:38:42 2024 +0200

    Merge branch 'master' into okoroleva-MM-6661-mmineAndUpdates

commit 36904223d90cfc1dad7bffad05a0a78d890df358
Author: Olga Koroleva <Olga.Koroleva@infobip.com>
Date:   Wed Aug 14 08:46:06 2024 +0000

    Pull request #108: customPayload of the Interactive message will be put to the MO message if it's generated

    Merge in MML/infobip-mobile-messaging-cordova-plugin from okoroleva-MM-6662-customPayload to master

    Squashed commit of the following:

    commit 6578d55852220c938299926b4d75887209c94dc0
    Author: Olga Koroleva <olga.koroleva@infobip.com>
    Date:   Tue Aug 13 14:47:36 2024 +0200

        minor update

    commit f999c07093f99df138dfdfca8a888a56a9b513e2
    Author: Olga Koroleva <olga.koroleva@infobip.com>
    Date:   Tue Aug 13 14:18:31 2024 +0200

        customPayload of the Interactive message will be put to the MO message if it's generated

commit 5482f57a41ce92a84d7ee111d8d69df8fc945a5b
Author: Ivan Krešić <Ivan.Kresic@infobip.com>
Date:   Wed Jul 17 09:58:16 2024 +0000

    Pull request #107: - updated Android 13 notification permission guide

    Merge in MML/infobip-mobile-messaging-cordova-plugin from ikresic-PZ-695-in-app-push-notification-issues to master

    Squashed commit of the following:

    commit 3db6b3d3ff47cdf6093aaf6d3653c373a1982b78
    Author: ikresic <ivan.kresic@infobip.com>
    Date:   Wed Jul 17 11:38:59 2024 +0200

        - updated Android 13 notification permission guide

    commit fc

--- a/libs/android/mobile-messaging-aar.gradle
+++ b/libs/android/mobile-messaging-aar.gradle
@@ -1,7 +1,16 @@
-def overrideAndroidSupportLibsVersion = cdvHelpers.getConfigPreference("IB_ANDROID_SUPPORT_VER_OVERRIDE", "false")
-def overrideGmsVersion = cdvHelpers.getConfigPreference("IB_ANDROID_GMS_VER_OVERRIDE", "false")
-def overrideFirebaseVersion = cdvHelpers.getConfigPreference("IB_ANDROID_FIREBASE_VER_OVERRIDE", "false")
-def withCryptorMigration = cdvHelpers.getConfigPreference("IB_ANDROID_USE_CRYPTOR_MIGRATION", "false")
+def overrideAndroidSupportLibsVersion = "false"
+def overrideGmsVersion = "false"
+def overrideFirebaseVersion = "false"
+def withCryptorMigration = "false"
+
+try {
+    if (cdvHelpers != null) { //not available for Capacitor
+        overrideAndroidSupportLibsVersion = cdvHelpers.getConfigPreference("IB_ANDROID_SUPPORT_VER_OVERRIDE", "false")
+        overrideGmsVersion = cdvHelpers.getConfigPreference("IB_ANDROID_GMS_VER_OVERRIDE", "false")
+        overrideFirebaseVersion = cdvHelpers.getConfigPreference("IB_ANDROID_FIREBASE_VER_OVERRIDE", "false")
+        withCryptorMigration = cdvHelpers.getConfigPreference("IB_ANDROID_USE_CRYPTOR_MIGRATION", "false")
+    }
+} catch (ignored) {}
 
 if (overrideAndroidSupportLibsVersion == "false") overrideAndroidSupportLibsVersion = ""
 if (overrideGmsVersion == "false") overrideGmsVersion = ""
@@ -34,8 +43,8 @@ buildscript {
 // apply plugin: 'com.huawei.agconnect'
 
 dependencies {
-    def mmHmsVersion = '6.2.0'
-    def mmFcmVersion = '12.3.0'
+    def mmHmsVersion = '6.6.1'
+    def mmFcmVersion = '12.9.1'
     // Modified by scripts/hms_fix_dependencies.js . To enable run: cordova build android --hms
     def isHmsBuild = false
 
