Pull request #139: Jdzubak MCA-4809 in app chat jwt
Merge in MML/infobip-mobile-messaging-cordova-plugin from jdzubak-MCA-4809-in-app-chat-jwt to master

Squashed commit of the following:

commit b70c731c8a42bb587c0f8e72d3f4e83712593fc8
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Aug 20 14:42:28 2025 +0000

    Applied suggestion

commit 4d9bfb0efe3cb0f27e1cef653e2ef96a9545ff78
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Aug 13 10:45:14 2025 +0200

    MCA-4819 Updated JS syntax

commit d6332bdfe17d71b0b2d410fb44fde2afaa1b8f10
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Aug 13 10:09:35 2025 +0200

    MCA-4819 Huawei version bumped

commit adcc240692772a828b2df9742a675841ffd5570f
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Aug 13 10:08:50 2025 +0200

    MCA-4819 reverted package.json

commit e7d8e5b0f7b89f448ccbdfe4accc29a373b1e44b
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Aug 13 10:06:38 2025 +0200

    MCA-4819 Android version updated

commit f57cb2b264eb705f04cfd0a4ee1c9b816df63d07
Merge: 1095787 977ad93
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Aug 13 07:39:49 2025 +0200

    Merge remote-tracking branch 'origin/master' into jdzubak-MCA-4809-in-app-chat-jwt
    
    # Conflicts:
    #	example/www/js/app.js
    #	plugin.xml

commit 109578780f94e03a7f658917c67b9e67afd7fb56
Author: Francisco Fortes <francisco.fortes@infobip.com>
Date:   Tue Aug 12 15:04:45 2025 +0200

    Merge branch 'master' into jdzubak-MCA-4809-in-app-chat-jwt
    
    # Conflicts:
    #	example/www/js/app.js
    #	libs/android/mobile-messaging-aar.gradle

commit 69970a8c3f78e2b165c390ac61b498ece739ac9e
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Jul 28 12:00:38 2025 +0200

    MCA-4819 Android - Doco

commit 66afd54f0ee165d72e8ba29a12c9cf39aab8ec42
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Jul 25 14:11:30 2025 +0200

    MCA-4819 Android - Added support for asy

--- a/libs/android/mobile-messaging-aar.gradle
+++ b/libs/android/mobile-messaging-aar.gradle
@@ -36,15 +36,21 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.7.3'
+        classpath 'com.android.tools.build:gradle:8.9.1'
+    }
+}
+
+android {
+    buildFeatures {
+        viewBinding true
     }
 }
 
 // apply plugin: 'com.huawei.agconnect'
 
 dependencies {
-    def mmHmsVersion = '8.1.1'
-    def mmFcmVersion = '14.1.1'
+    def mmHmsVersion = '8.2.0'
+    def mmFcmVersion = '14.2.0'
     // Modified by scripts/hms_fix_dependencies.js . To enable run: cordova build android --hms
     def isHmsBuild = false
 
