--- a/plugin.xml
+++ b/plugin.xml
@@ -88,8 +88,9 @@
 		</config-file>
 
 		<framework src="libs/android/mobile-messaging-aar.gradle" custom="true" type="gradleReference" />
-		<framework src="com.google.android.material:material:1.4.0"/>
+		<framework src="com.google.android.material:material:1.12.0"/>
 		<framework src="androidx.exifinterface:exifinterface:1.3.3"/>
+		<framework src="androidx.core:core-ktx:1.16.0"/>
 		<source-file src="src/android/MobileMessagingCordova.java" target-dir="src/org/apache/cordova/plugin"/>
 	</platform>
 
