Pull request #141: Mtokar MCA-4810 chat customization
Merge in MML/infobip-mobile-messaging-cordova-plugin from mtokar-MCA-4810-chat-customization to master

Squashed commit of the following:

commit 524ce147453b02b0baf2a42ee49849208f3332a7
Author: Francisco Fortes <francisco.fortes@infobip.com>
Date:   Tue Aug 26 15:36:53 2025 +0200

    iOS part - chat customization

commit ad79e141f23861d847ca0d0446c773cad86c3a5b
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Aug 26 14:18:44 2025 +0200

    MCA-4810 Review

commit b5b6f9c6759706bc73e9c90490321c69f197ed68
Merge: 5dc9bd1 fb00cd9
Author: Francisco Fortes <francisco.fortes@infobip.com>
Date:   Tue Aug 26 13:12:16 2025 +0200

    Merge branch 'master' into mtokar-MCA-4810-chat-customization

commit 5dc9bd172a7780ad414606287e35aee1ec2f57d2
Author: Matus Tokar <Matus.Tokar@infobip.com>
Date:   Mon Aug 25 18:53:49 2025 +0200

    MCA-4810 widgetTheme support

commit fe3a92eb76502a8b916ba4c79fd028160daa0593
Author: Matus Tokar <Matus.Tokar@infobip.com>
Date:   Mon Aug 25 17:50:37 2025 +0200

    MCA-4810 add example resources

commit ce03bb3db618cabcef8828520fbde363f8612446
Author: Matus Tokar <Matus.Tokar@infobip.com>
Date:   Mon Aug 25 17:47:40 2025 +0200

    MCA-4810 rollback deleted line

commit c7dc508f0a0e0a6f26a6dad6d6073097d315266f
Author: Matus Tokar <Matus.Tokar@infobip.com>
Date:   Mon Aug 25 17:42:45 2025 +0200

    MCA-4810 impl android and plugin

--- a/plugin.xml
+++ b/plugin.xml
@@ -58,9 +58,9 @@
 
 		<podspec>
 			<pods use-frameworks="true">
-				<pod name="MobileMessaging" spec="13.11.0" />
-				<pod name="MobileMessaging/InAppChat" spec="13.11.0" />
-				<pod name="MobileMessaging/Inbox" spec="13.11.0" />
+				<pod name="MobileMessaging" spec="13.11.2" />
+				<pod name="MobileMessaging/InAppChat" spec="13.11.2" />
+				<pod name="MobileMessaging/Inbox" spec="13.11.2" />
 			</pods>
 		</podspec>
 		<source-file src="src/ios/MobileMessagingCordova.swift" />
@@ -92,6 +92,7 @@
 		<framework src="androidx.exifinterface:exifinterface:1.3.3"/>
 		<framework src="androidx.core:core-ktx:1.16.0"/>
 		<source-file src="src/android/MobileMessagingCordova.java" target-dir="src/org/apache/cordova/plugin"/>
+		<source-file src="src/android/ChatCustomization.java" target-dir="src/org/apache/cordova/plugin"/>
 	</platform>
 
 </plugin>
