--- a/plugin.xml
+++ b/plugin.xml
@@ -91,6 +91,7 @@
 		<framework src="com.google.android.material:material:1.12.0"/>
 		<framework src="androidx.exifinterface:exifinterface:1.3.3"/>
 		<framework src="androidx.core:core-ktx:1.16.0"/>
+		<framework src="androidx.lifecycle:lifecycle-runtime-ktx:2.9.3"/>
 		<source-file src="src/android/MobileMessagingCordova.java" target-dir="src/org/apache/cordova/plugin"/>
 		<source-file src="src/android/ChatCustomization.java" target-dir="src/org/apache/cordova/plugin"/>
 	</platform>
