Pull request #154: Ffortes MCA-5051 DebugConsoleLogs
Merge in MML/infobip-mobile-messaging-cordova-plugin from ffortes-MCA-5051-DebugConsoleLogs to master

Squashed commit of the following:

commit 792937daf66e01e3bb40efcf5ed388f605cccbf0
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Dec 16 11:07:05 2025 +0100

    MCA-5120 Review fixes

commit 42116c100c8c706ebeae27a8e725b3d98792d982
Author: Saša Lončarević <Sasa.Loncarevic@infobip.com>
Date:   Mon Dec 15 15:14:00 2025 +0000

    Applied suggestion

commit 9cad800fce133dc5f9989b1dee64794a68140666
Author: Saša Lončarević <Sasa.Loncarevic@infobip.com>
Date:   Mon Dec 15 15:13:47 2025 +0000

    Applied suggestion

commit cec4f2a353427a97ee781028a3cfd90122da4a20
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Dec 15 11:48:26 2025 +0100

    MCA-5120 Android missing classes

commit f88309437c6a1affe71815930b20f586081f178f
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Dec 10 15:48:53 2025 +0100

    MCA-5120 Android native logs routed to Cordova JS console

commit 5c3c23e9f0e0928612bcc2dcad13a306a5b76c13
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Dec 10 15:45:46 2025 +0100

    MCA-5120 Android native logs routed to Cordova JS console

commit b37c290f219bcb0144b2678919ecd321ad2e8b4b
Author: Francisco Fortes <francisco.fortes@infobip.com>
Date:   Fri Dec 5 12:23:53 2025 +0100

    cleanup

commit b7c4a2e78f9d94eaaa5158573942d06696f4115b
Author: Francisco Fortes <francisco.fortes@infobip.com>
Date:   Thu Dec 4 13:37:20 2025 +0100

    partially reverting last commit

commit add62cff7ad654b845ead98e3831905a992f3ee4
Author: Francisco Fortes <francisco.fortes@infobip.com>
Date:   Thu Dec 4 13:12:21 2025 +0100

    plugin.xml update

commit afb71a7adbb6ac45fa22699eb4c939dfc3ece83b
Author: Francisco Fortes <francisco.fortes@infobip.com>
Date:   Thu Dec 4 11:23:37 2025 +0100

    MCA-5051 Exposing core debug logs into plugin terminal

--- a/plugin.xml
+++ b/plugin.xml
@@ -58,12 +58,13 @@
 
 		<podspec>
             <pods use-frameworks="true">
-                <pod name="MobileMessaging" spec="14.1.1" />
-                <pod name="MobileMessaging/InAppChat" spec="14.1.1" />
-                <pod name="MobileMessaging/Inbox" spec="14.1.1" />
+                <pod name="MobileMessaging" spec="14.2.0" />
+                <pod name="MobileMessaging/InAppChat" spec="14.2.0" />
+                <pod name="MobileMessaging/Inbox" spec="14.2.0" />
             </pods>
 		</podspec>
 		<source-file src="src/ios/MobileMessagingCordova.swift" />
+		<source-file src="src/ios/InfobipMobileMessagingCordovaLogger.swift" />
 	</platform>
 
 	<platform name="android">
@@ -94,6 +95,8 @@
 		<framework src="androidx.lifecycle:lifecycle-runtime-ktx:2.9.3"/>
 		<source-file src="src/android/MobileMessagingCordova.java" target-dir="src/org/apache/cordova/plugin"/>
 		<source-file src="src/android/ChatCustomization.java" target-dir="src/org/apache/cordova/plugin"/>
+		<source-file src="src/android/CordovaLogger.java" target-dir="src/org/apache/cordova/plugin"/>
+		<source-file src="src/android/CordovaLogWriter.java" target-dir="src/org/apache/cordova/plugin"/>
 	</platform>
 
 </plugin>
